jupyter-lab-environment/kubernetes/deployment.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: jupyter
  labels: 
    name: jupyter
---
# Frontend Deployment (Pod)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-lab
  namespace: jupyter
  labels:
    app: jupyter-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter-lab
  # Pod template
  template:
    metadata:
      labels:
        app: jupyter-lab
    spec:
      containers:
        - name: jupyter-lab
          image: registry.gitlab.com/linumlabs/molecule-system-modelling/jupyter-lab:latest
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: "/home/jupyter/workspace"
            name: lab-workspace
          ports:
          - containerPort: 8888
      imagePullSecrets:
        - name: gitlab-registry-molecule
      volumes:
        - name: lab-workspace
          persistentVolumeClaim:
            claimName: jupyter-lab-workspace
---
# Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: jupyter-lab
  namespace: jupyter
  labels:
    app: jupyter-lab
spec:
  type: NodePort
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    app: jupyter-lab
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-jupyter-lab
  namespace: jupyter
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: linumdev
    # nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"
spec:
  rules:
    - host: lab.mol.ai
      http:
        paths:
          - backend:
              serviceName: jupyter-lab
              servicePort: 8888
            path: /
